src/test/deca/context/invalid/if_null.deca
/*
    Description : Utilisation d'un null au sein d'un if

    Résultat: Erreur contextuelle (deca:8:8)
*/
{
    int x;
    if (null){
        x = 2;
    }
}
